--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO = mongodb+srv://ohin31:ohin1911@cluster0.07lgbsy.mongodb.net/?retryWrites=true&w=majority
 
+JWT = BnzyGFMBoeM4iE8bz7OFvU66RgHnOtEWcpKz+BuYRoY=
+
 
